# agent-illustrator

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md  TODO-AGENT-DISCOVERABILITY.md  TODO.md  flake.nix  render-example.sh  update-flake.sh
.github/workflows/: release.yml
.specswarm/: constitution.md  quality-standards.md  tech-stack.md
docs/: benchmarks.md  examples.md  grammar.md  iteration-procedure.md  skill-animation.md  skill-find-clipart.md  skill-styling.md  skill.md  spec-constraint-solver.md
examples/: agentic-loop-story.ail  agentic-loop.ail  agentic-loop.css  anchors-demo.ail  architecture.ail  embedded-images.ail  feedback-loops.ail  gallic-wars-timeline.ail  label-test.ail  mosfet-driver.ail  person-rotation.ail  person.ail  railway-junction-direct.ail  railway-topology-templated.ail  railway-topology.ail  render-all.sh
examples/eendraadschema/: 1525-eendraadschema.ail  README.md  eendraad-symbols.ail
examples/stylesheets/: default.toml  kapernikov.toml
features/004-ail-format-ergonomics/: plan.md  (+4 more)
githooks/: pre-commit
src/: error.rs  lib.rs  main.rs  stylesheet.rs
stylesheets/: agentic-loop-story.css  kapernikov-schematic.css  kapernikov.css
tests/: ANALYSIS.md  anchor_constraints.rs  constraint_satisfaction.rs  integration_tests.rs  lint_integration.rs  rotation_integration.rs  svg_regression.rs
tests2/: ANALYSIS.md
tests3/: ANALYSIS.md  prompt-devops-cycle.txt  prompt-flowchart-complex.txt  skill-example-test.ail
tests4/: ANALYSIS.md  PLAN-QUALITY.md  SKILL-ITERATION-SUMMARY.md  SKILL-V7-REVIEW.md  SKILL-V8-REVIEW.md
(+190 files in other folders)
