[package]
name = "agent-illustrator"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14"
chumsky = "1.0.0-alpha.7"
ariadne = "0.4"
thiserror = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
kasuari = "0.4"

[dev-dependencies]
insta = "1.39"
pretty_assertions = "1.4"
